--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "=0.5.0-rc.3"
+rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "a298f84" }
 figment = { version = "0.10", features = ["env", "toml", "json"] }
